--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "postcss": "^8.1.14",
         "sass": "^1.56.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "quill": "^1.3.7"
     }
 }
